--- a/nacos-demo/app/user/cmd/rpc/etc/user.yaml
+++ b/nacos-demo/app/user/cmd/rpc/etc/user.yaml
@@ -1,9 +1,6 @@
+# 这个配置是放在nacos上的
 Name: user-rpc
 ListenOn: 0.0.0.0:8889
-#Etcd:
-#  Hosts:
-#  - 127.0.0.1:2379
-#  Key: user.rpc
 
 NacosConfig:
   Host: 127.0.0.1
